--- a/patch.yml
+++ b/patch.yml
@@ -1,17 +1,10 @@
 ---
-- name: Patch Ubuntu Servers
-  hosts: all
+- hosts: all
   become: yes
-
+  become_method: sudo
   tasks:
-    - name: Update apt cache
+    - name: Update Repository cache
       apt:
         update_cache: yes
-      become: yes
-
-    - name: Upgrade all packages
-      apt:
-        upgrade: dist
-        autoremove: yes
-        autoclean: yes
-      become: yes
+        cache_valid_time: 3600
+        force_apt_get: yes
