--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 inventory = ./hosts
-remote_user = ansible
+remote_user = mpvarma9997
 host_key_checking = false
 deprecation_warning = false
 
