--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,10 +1,10 @@
-[defaults]
-inventory = ./hosts
-remote_user = mpvarma9997
-host_key_checking = false
-deprecation_warning = false
+# [defaults]
+# inventory = ./hosts
+# remote_user = mpvarma9997
+# host_key_checking = false
+# deprecation_warning = false
 
-[privilage_escalation]
-become = True
-become_method = sudo
-become_user = root
+# [privilage_escalation]
+# become = True
+# become_method = sudo
+# become_user = root
